# auth/src/static/openapi.yml
@@ -24,10 +24,12 @@ paths:
             schema:
               $ref: '#/components/schemas/User'
       responses:
-        '200':
+        '201':
           description: Successful operation
         '400':
-          description: Пользователь с таким login уже существует
+          description: You have to pass login and password
+        '409':
+          description: User with this login already exists
   /api/v1/account/login:
     post:
       tags:
@@ -48,31 +50,29 @@ paths:
               schema:
                 $ref: '#/components/schemas/TokenResponse'
         '400':
-          description: Пользователь не найден
+          description: You have to pass login and password
         '401':
-          description: Неправильный пароль
+          description: Wrong login or password
   /api/v1/account/refresh:
-    get:
+    post:
       tags:
         - auth
       summary: Обновить токен
       description: Обновить токен
       operationId: refresh
-      parameters:
-        - in: header
-          name: RefreshToken
-          schema:
-            type: string
-          required: true
+      security:
+        - bearerAuth: []
       responses:
         '200':
           description: Successful operation
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TokenResponse'
+                $ref: '#/components/schemas/AccessToken'
         '401':
-          description: Токен невалидный
+          description: Missing Authorization Header
+        '422':
+          description: Wrong token
   /api/v1/account/logout:
     get:
       tags:
@@ -80,22 +80,15 @@ paths:
       summary: Выйти из аккаунта
       description: Выйти из аккаунта
       operationId: logout
-      parameters:
-        - in: header
-          name: AccessToken
-          schema:
-            type: string
-          required: true
-        - in: header
-          name: RefreshToken
-          schema:
-            type: string
-          required: true
+      security:
+        - bearerAuth: []
       responses:
         '200':
-          description: Successful operation
+          description: Token has been revoked
         '401':
-          description: Токен невалидный
+          description: Missing Authorization Header
+        '422':
+          description: Wrong token
   /api/v1/account/change_login:
     put:
       tags:
@@ -103,12 +96,8 @@ paths:
       summary: Изменить логин
       description: Изменить логин
       operationId: change_login
-      parameters:
-        - in: header
-          name: AccessToken
-          schema:
-            type: string
-          required: true
+      security:
+        - bearerAuth: []
       requestBody:
         content:
           application/json:
@@ -118,9 +107,11 @@ paths:
         '200':
           description: Successful operation
         '401':
-          description: Токен невалидный
-        '400':
-          description: Пользователь с таким именем уже существует
+          description: Missing Authorization Header
+        '409':
+          description: User with this login already exists
+        '422':
+          description: Wrong token
   /api/v1/account/change_password:
     put:
       tags:
@@ -128,12 +119,8 @@ paths:
       summary: Изменить пароль
       description: Изменить пароль
       operationId: change_password
-      parameters:
-        - in: header
-          name: AccessToken
-          schema:
-            type: string
-          required: true
+      security:
+        - bearerAuth: []
       requestBody:
         content:
           application/json:
@@ -143,7 +130,9 @@ paths:
         '200':
           description: Successful operation
         '401':
-          description: Токен невалидный
+          description: Missing Authorization Header
+        '422':
+          description: Wrong token
   /api/v1/account/history:
     post:
       tags:
@@ -151,12 +140,8 @@ paths:
       summary: История входов
       description: История входов
       operationId: history
-      parameters:
-        - in: header
-          name: AccessToken
-          schema:
-            type: string
-          required: true
+      security:
+        - bearerAuth: []
       responses:
         '200':
           description: Successful operation
@@ -165,7 +150,9 @@ paths:
               schema:
                 $ref: '#/components/schemas/History'
         '401':
-          description: Токен невалидный
+          description: Missing Authorization Header
+        '422':
+          description: Wrong token
   /api/v1/roles/create:
     post:
       tags:
@@ -389,6 +376,12 @@ components:
         refresh_token:
           type: string
           example: 123
+    AccessToken:
+      type: object
+        properties:
+          access_token:
+            type: string
+            example: 123
     RefreshToken:
       type: object
       properties:
@@ -442,3 +435,10 @@ components:
       type: array
       items:
         $ref: '#/components/schemas/Role'
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
+security:
+  - bearerAuth: []
